# helix-file-watcher

./: Cargo.toml  README.md  file-watcher.scm  flake.nix  helix-file-watcher.scm  new.scm
scripts/: test-zellij-cpu.sh
src/: lib.rs
